alteracao dos dados laterais

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h2>Maricélia Mussi</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Freelance</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer full stack junior</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Indaiatuba-SP</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>maricelia.mussi@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(19)98398-7924</p>
