prenchimento sobre, educação e experincias

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
+              <h2>Sobre</h2>
+            <p>Sou formada em Tecnologia em Sistemas para Internet pela UNICESUMAR. Minha jornada mistura experiências como recepcionista, auxiliar administrativo e freelancer em desenvolvimento web e Web design. Hoje, meu foco é me tornar developer full stack, aprimorando minhas habilidades em JavaScript, React e Node.js. Minha paixão por tecnologia e minha formação me preparam para contribuir com soluções inovadoras. Estou aberta a novas oportunidades e desafios na área de desenvolvimento.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,16 +100,17 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Freelancer</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Setembro 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Hoje atuo na criação de designs visuais, criação de aplicação web e suporte na configuração de emails personalizados e domínios usando as ferramentas do Google Workspace. 
+              </p>
               <hr>
             </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+            <!-- <div class="w3-container">
+              <h5 class="w3-opacity"><b>Freelancer</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
               <p>TODO</p>
-            </div>
+            </div> -->
           </div>
   
           <div class="w3-container w3-card w3-white">
@@ -122,11 +125,11 @@
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
-              <ul>
+              <!-- <ul>
                 <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
                 <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
                 <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-              </ul>
+              </ul> -->
               <hr>
             </div>
             <div class="w3-container">
@@ -143,18 +146,18 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/mariceliamussi?tab=repositories" target="_blank">mariceliamussi/repositories</a>
               </h6>
-              <p>TODO</p>
+              <!-- <p>TODO</p> -->
               <hr>
             </div>
-            <div class="w3-container">
+            <!-- <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
               <p>TODO</p>
-            </div>
+            </div> -->
           </div>
   
           <!-- End Right Column -->
