correção de erro de codigo na sessão sobre

--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
-              <h2>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
+              Sobre
             <p>Sou formada em Tecnologia em Sistemas para Internet pela UNICESUMAR. Minha jornada mistura experiências como recepcionista, auxiliar administrativo e freelancer em desenvolvimento web e Web design. Hoje, meu foco é me tornar developer full stack, aprimorando minhas habilidades em JavaScript, React e Node.js. Minha paixão por tecnologia e minha formação me preparam para contribuir com soluções inovadoras. Estou aberta a novas oportunidades e desafios na área de desenvolvimento.
             </p>
           </div>
